--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,3 +10,5 @@ jobs:
           node-version: '18'
       - run: npm install
       - run: npm run test
+      - run: npm run format_check
+      - run: npm run lint
