--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -1,14 +1,16 @@
-name: ci
+name: test_lint
 on: [push]
 jobs:
-  run-tests:
+  lint:
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
+
       - run: npm install
-      - run: npm run test
-      - run: npm run format_check
+
       - run: npm run lint
