Remove rulke disabling

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/dist",
     "postpublish": "npm run deploy",
-    "lint": "eslint --max-warnings=0 \"src/**/*.{ts,tsx}\" --rule \"react-hooks/exhaustive-deps: off\"",
+    "lint": "eslint --max-warnings=0 \"src/**/*.{ts,tsx}\"",
     "format_check": "prettier --check \"src/**/*.tsx\" \"src/**/*.ts\""
   },
   "exports": {
