add XLSX support

--- a/example/package.json
+++ b/example/package.json
@@ -14,7 +14,8 @@
     "highlight.js": "^11.11.1",
     "preact": "^10.25.4",
     "hello-csv": "file:..",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.1",
