--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-table": "^8.21.2",
     "cva": "npm:class-variance-authority@^0.7.1",
-    "papaparse": "^5.4.1"
+    "papaparse": "^5.4.1",
+    "xlsx": "^0.18.5"
   }
 }
