--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -4,10 +4,11 @@ on:
   push:
     branches:
       - main
+      - production
   pull_request:
     branches:
       - main
-
+      - production
   workflow_dispatch:
 
 jobs:
