--- a/.github/workflows/sync-production-to-main.yml
+++ b/.github/workflows/sync-production-to-main.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Enable auto-merge
         run: |
           pr_url=$(gh pr list --head sync-production-to-main --base main --json url -q '.[0].url')
-          gh pr merge "$pr_url" --auto --merge
+          gh pr merge "$pr_url" --auto --squash
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
